--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,17 +3,17 @@
 
 @font-face {
     font-family: 'PingFangTC';
-    src: url('/PingFangTC-Semibold.ttf') format("woff"),
+    src: url('./PingFangTC-Semibold.ttf') format("woff"),
 }
 
 @font-face {
     font-family: 'PingFangTC-light';
-    src: url('/PingFang-Light.ttf') format("woff"),
+    src: url('./PingFang-Light.ttf') format("woff"),
 }
 
 @font-face {
     font-family: 'HelveticaNeue-Regular';
-    src: url('/HelveticaNeue\ Regular.ttf') format("woff"),
+    src: url('./HelveticaNeue\ Regular.ttf') format("woff"),
 }
 
 * {
@@ -177,33 +177,33 @@ header {
 }
 
 .bottom-card-img1 {
-    background-image: url(/img/p-1.png);
+    background-image: url(./img/p-1.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
 .bottom-card-img2 {
-    background-image: url(/img/p-2.png);
+    background-image: url(./img/p-2.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
 .bottom-card-img3 {
-    background-image: url(/img/p-3.png);
+    background-image: url(./img/p-3.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 .bottom-card-img4 {
-    background-image: url(/img/p-4.png);
+    background-image: url(./img/p-4.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 .bottom-card-img5 {
-    background-image: url(/img/p-5.png);
+    background-image: url(./img/p-5.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
