--- a/scss/main.scss
+++ b/scss/main.scss
@@ -279,3 +279,12 @@ header {
 .login-right a{
     transition: 0.6s ease;
 }
+.cart_Detail_list{
+    border-bottom: 1px solid #EAF0ED;
+}
+.cartLIstItem_body_button p{
+    border: 1px solid #EAF0ED;
+}
+.cartLIstItem_body_button button{
+    border: 1px solid #EAF0ED;
+}
