--- a/css/main.css
+++ b/css/main.css
@@ -275,4 +275,16 @@ header {
 
 .login-right a {
   transition: 0.6s ease;
+}
+
+.cart_Detail_list {
+  border-bottom: 1px solid #EAF0ED;
+}
+
+.cartLIstItem_body_button p {
+  border: 1px solid #EAF0ED;
+}
+
+.cartLIstItem_body_button button {
+  border: 1px solid #EAF0ED;
 }/*# sourceMappingURL=main.css.map */
