--- a/src/output.css
+++ b/src/output.css
@@ -808,6 +808,10 @@ video {
   margin-top: 5%;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -915,6 +919,10 @@ video {
   height: 100%;
 }
 
+.h-\[106px\] {
+  height: 106px;
+}
+
 .h-\[186px\] {
   height: 186px;
 }
@@ -963,6 +971,10 @@ video {
   height: 40px;
 }
 
+.h-\[48px\] {
+  height: 48px;
+}
+
 .h-\[496px\] {
   height: 496px;
 }
@@ -985,6 +997,10 @@ video {
 
 .w-\[100\%\] {
   width: 100%;
+}
+
+.w-\[157px\] {
+  width: 157px;
 }
 
 .w-\[171px\] {
@@ -1017,6 +1033,10 @@ video {
 
 .w-\[40px\] {
   width: 40px;
+}
+
+.w-\[48px\] {
+  width: 48px;
 }
 
 .w-\[59px\] {
@@ -1587,6 +1607,19 @@ video {
 
 .justify-items-stretch {
   justify-items: stretch;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-y-\[30px\] {
+  row-gap: 30px;
+}
+
+.gap-y-\[8\.5px\] {
+  row-gap: 8.5px;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2246,6 +2279,10 @@ video {
   padding-top: 40px;
 }
 
+.pb-\[20px\] {
+  padding-bottom: 20px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -2317,6 +2354,10 @@ video {
 
 .text-\[13px\] {
   font-size: 13px;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
 }
 
 .text-\[20px\] {
@@ -2959,6 +3000,10 @@ video {
     display: none;
   }
 
+  .md\:h-\[110px\] {
+    height: 110px;
+  }
+
   .md\:h-\[280px\] {
     height: 280px;
   }
@@ -2973,6 +3018,10 @@ video {
 
   .md\:h-\[460px\] {
     height: 460px;
+  }
+
+  .md\:w-\[110px\] {
+    width: 110px;
   }
 
   .md\:w-\[256px\] {
