--- a/src/output.css
+++ b/src/output.css
@@ -776,6 +776,10 @@ video {
   margin-bottom: 60px;
 }
 
+.ml-\[40px\] {
+  margin-left: 40px;
+}
+
 .mr-15 {
   margin-right: 3.75rem;
 }
@@ -790,6 +794,10 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-\[10px\] {
+  margin-top: 10px;
 }
 
 .mt-\[3\%\] {
@@ -999,8 +1007,8 @@ video {
   width: 100%;
 }
 
-.w-\[157px\] {
-  width: 157px;
+.w-\[135px\] {
+  width: 135px;
 }
 
 .w-\[171px\] {
@@ -1021,6 +1029,10 @@ video {
 
 .w-\[32px\] {
   width: 32px;
+}
+
+.w-\[33\%\] {
+  width: 33%;
 }
 
 .w-\[36px\] {
@@ -1065,6 +1077,22 @@ video {
 
 .w-\[weird-and-invalid\] {
   width: weird-and-invalid;
+}
+
+.w-\[40\%\] {
+  width: 40%;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[150px\] {
+  width: 150px;
+}
+
+.min-w-\[110px\] {
+  min-width: 110px;
 }
 
 .max-w-\[100\%\] {
@@ -1614,12 +1642,13 @@ video {
        column-gap: 1rem;
 }
 
-.gap-y-\[30px\] {
-  row-gap: 30px;
+.gap-x-\[1\%\] {
+  -moz-column-gap: 1%;
+       column-gap: 1%;
 }
 
-.gap-y-\[8\.5px\] {
-  row-gap: 8.5px;
+.gap-y-\[30px\] {
+  row-gap: 30px;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2225,6 +2254,11 @@ video {
   padding-right: 40px;
 }
 
+.px-\[6px\] {
+  padding-left: 6px;
+  padding-right: 6px;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -2245,6 +2279,11 @@ video {
   padding-bottom: 16px;
 }
 
+.py-\[1px\] {
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
 .py-\[30px\] {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -2253,6 +2292,15 @@ video {
 .py-\[60px\] {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.py-\[8\.5px\] {
+  padding-top: 8.5px;
+  padding-bottom: 8.5px;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .pb-\[10px\] {
@@ -2271,16 +2319,16 @@ video {
   padding-left: 60px;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .pt-\[30px\] {
   padding-top: 30px;
 }
 
 .pt-\[40px\] {
   padding-top: 40px;
-}
-
-.pb-\[20px\] {
-  padding-bottom: 20px;
 }
 
 .text-left {
@@ -3040,12 +3088,28 @@ video {
     width: 460px;
   }
 
+  .md\:w-\[66\%\] {
+    width: 66%;
+  }
+
+  .md\:w-\[135px\] {
+    width: 135px;
+  }
+
+  .md\:w-\[140px\] {
+    width: 140px;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
 
   .md\:flex-row-reverse {
     flex-direction: row-reverse;
+  }
+
+  .md\:flex-nowrap {
+    flex-wrap: nowrap;
   }
 
   .md\:justify-end {
@@ -3058,6 +3122,10 @@ video {
 
   .md\:justify-between {
     justify-content: space-between;
+  }
+
+  .md\:border-none {
+    border-style: none;
   }
 
   .md\:p-0 {
@@ -3082,6 +3150,10 @@ video {
   .md\:py-16 {
     padding-top: 4rem;
     padding-bottom: 4rem;
+  }
+
+  .md\:pb-\[10px\] {
+    padding-bottom: 10px;
   }
 
   .md\:writing-mode-vertical-rl {
