--- a/css/main.css
+++ b/css/main.css
@@ -463,4 +463,24 @@ header {
 
 .payment_form_content_security input {
   width: calc(50% - 8px);
+}
+
+.invoiceForm_type {
+  border: 1px solid #EAF0ED;
+}
+
+.invoiceForm_type button {
+  width: 50%;
+  height: 100%;
+  font-weight: 600;
+  border: none;
+  color: #EAF0ED;
+  background-color: #3F5D45;
+  font-size: 20px;
+  padding: 14px 0px;
+}
+
+.btn_handle {
+  background-color: #EAF0ED !important;
+  color: #3F5D45 !important;
 }/*# sourceMappingURL=main.css.map */
