--- a/src/output.css
+++ b/src/output.css
@@ -780,6 +780,10 @@ video {
   margin-bottom: 10px;
 }
 
+.mb-\[14px\] {
+  margin-bottom: 14px;
+}
+
 .mb-\[20px\] {
   margin-bottom: 20px;
 }
@@ -1015,6 +1019,10 @@ video {
   height: 80px;
 }
 
+.min-h-\[100\%\] {
+  min-height: 100%;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -1093,6 +1101,10 @@ video {
 
 .w-\[weird-and-invalid\] {
   width: weird-and-invalid;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .min-w-\[110px\] {
@@ -1645,6 +1657,11 @@ video {
   justify-items: stretch;
 }
 
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -1686,9 +1703,9 @@ video {
   row-gap: 30px;
 }
 
-.gap-x-2 {
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
+.gap-x-\[1px\] {
+  -moz-column-gap: 1px;
+       column-gap: 1px;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2146,10 +2163,6 @@ video {
   background-color: rgb(255 225 128 / var(--tw-bg-opacity));
 }
 
-.bg-\[EAF0ED\] {
-  background-color: EAF0ED;
-}
-
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
@@ -2286,11 +2299,6 @@ video {
   padding: 30px;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -2364,6 +2372,11 @@ video {
 .py-\[8\.5px\] {
   padding-top: 8.5px;
   padding-bottom: 8.5px;
+}
+
+.py-\[14px\] {
+  padding-top: 14px;
+  padding-bottom: 14px;
 }
 
 .pb-4 {
@@ -3054,20 +3067,6 @@ video {
   text-align: center;
 }
 
-@media (min-width: 374px) {
-  .min-\[374px\]\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-
-@media (min-width: 375px) {
-  .min-\[375px\]\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-
 @media (min-width: 376px) {
   .min-\[376px\]\:px-10 {
     padding-left: 2.5rem;
@@ -3253,11 +3252,6 @@ video {
   .md\:py-16 {
     padding-top: 4rem;
     padding-bottom: 4rem;
-  }
-
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
   }
 
   .md\:pb-\[10px\] {
