--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "PingFangTC";
   src: url("../PingFangTC-Semibold.ttf") format("woff");
@@ -508,4 +509,38 @@ header {
   top: 10px;
   right: 20px;
   border-color: transparent transparent #3F5D45 transparent;
+}
+
+.payfinish:after {
+  content: "";
+  position: absolute;
+  width: 5px;
+  height: 10px;
+  border-right: 1px solid #EAF0ED;
+  border-bottom: 1px solid #EAF0ED;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(40deg);
+}
+
+.settle:before {
+  background-color: #3F5D45;
+}
+
+.settle:after {
+  background-color: #3F5D45;
+}
+
+.success_main_content {
+  width: 100%;
+  height: 518px;
+  padding-top: 210px;
+  background-image: url(https://images.unsplash.com/photo-1505935428862-770b6f24f629?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2c5a2cf…&auto=format&fit=crop&w=800&q=60);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+  align-items: center;
 }/*# sourceMappingURL=main.css.map */
