--- a/css/main.css
+++ b/css/main.css
@@ -543,4 +543,49 @@ header {
   flex-direction: column;
   row-gap: 32px;
   align-items: center;
+}
+
+.ham-nav::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+/* 隱藏 checkbox */
+.ham-input {
+  display: none;
+}
+
+/* 漢堡按鈕 */
+.ham-label {
+  float: left;
+}
+.ham-label img {
+  width: 30px;
+  vertical-align: middle;
+}
+
+/* 選單列 */
+.ham-menu {
+  clear: both;
+  background: #fff;
+}
+.ham-menu li a {
+  display: block;
+  padding: 10px 0;
+  font-size: 20px;
+}
+.ham-menu li a:hover {
+  background: #3F5D45;
+  color: #fff;
+}
+
+.ham-menu {
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.3s;
+}
+
+.ham-input:checked ~ .ham-menu {
+  max-height: 300px;
 }/*# sourceMappingURL=main.css.map */
