--- a/scss/main.scss
+++ b/scss/main.scss
@@ -595,3 +595,11 @@ header {
   .ham-input:checked ~ .ham-menu {
     max-height: 300px;
   }
+
+.success_btn:hover{
+    background-color: darken($second-color,20%);
+}
+
+.etcBtn:hover .paperBtn:hover{
+    background-color: darken($second-color,20%);
+}
