--- a/scss/main.scss
+++ b/scss/main.scss
@@ -599,3 +599,6 @@ header {
 .success_btn:hover{
     background-color: darken($second-color,20%);
 }
+.bottom-card .border-middle{
+    border-right: solid 1px #EAF0ED ;
+}
