--- a/src/output.css
+++ b/src/output.css
@@ -1099,8 +1099,16 @@ video {
   width: 41%;
 }
 
+.w-\[42\.5\%\] {
+  width: 42.5%;
+}
+
 .w-\[48px\] {
   width: 48px;
+}
+
+.w-\[57\.5\%\] {
+  width: 57.5%;
 }
 
 .w-\[59px\] {
@@ -3066,11 +3074,6 @@ video {
 
 .hover\:cursor-pointer:hover {
   cursor: pointer;
-}
-
-.hover\:bg-red-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover {
