修正許多版面配置

--- a/src/output.css
+++ b/src/output.css
@@ -679,6 +679,10 @@ video {
   right: 10px;
 }
 
+.right-\[20px\] {
+  right: 20px;
+}
+
 .right-\[30px\] {
   right: 30px;
 }
@@ -697,6 +701,10 @@ video {
 
 .top-\[15px\] {
   top: 15px;
+}
+
+.top-\[16px\] {
+  top: 16px;
 }
 
 .top-\[60\%\] {
@@ -846,6 +854,14 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[80px\] {
+  margin-top: 80px;
 }
 
 .box-border {
@@ -2502,6 +2518,10 @@ video {
   font-family: PingFangTC-light;
 }
 
+.font-\[P100\%ngTC-light\] {
+  font-family: P100%ngTC-light;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -3136,10 +3156,6 @@ video {
     margin-bottom: 30px;
   }
 
-  .md\:mr-\[20px\] {
-    margin-right: 20px;
-  }
-
   .md\:mt-0 {
     margin-top: 0px;
   }
@@ -3359,10 +3375,6 @@ video {
 
   .min-\[940px\]\:block {
     display: block;
-  }
-
-  .min-\[940px\]\:pr-5 {
-    padding-right: 1.25rem;
   }
 }
 
